@@ -2,6 +2,6 @@ root := ..
 subdirs := 
 pre-targets := 
 bin := yes
-targets := cipherraw ciphertest ciphertest2 lexdump mkfastmod mod2vpl vpl2mod
+targets := cipherraw ciphertest ciphertest2 lexdump mkfastmod mod2vpl vpl2mod stepdump
 include ${root}/Makefile.cfg
 
