@@ -2,8 +2,12 @@ API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
 
+17-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
+	Added new utility, stepdump, for dumping BSISG STEP modules.
+
 11-Nov-2000	Joachim Ansorg <jansorg@crosswire.org>
 	Commited new version of the sk locale file.
+
 
 * Release 1.5.1a *
 
